--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ GENERAL PAGE
 
 /* Define a style for the main page including color, margins, fonts, etc. */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Anek Latin", sans-serif;
     background-color: #FBF8F8;
     margin-left: 10%;
     margin-right: 10%;
@@ -121,7 +121,7 @@ ABOUT ME SECTION
 
 /* Set style for offset, super-script text included in the about me section header */
 #aboutMeSuperscript {
-    font-family: cursive;
+    font-family: "Birthstone Bounce", cursive;
     font-size: 50px; 
     font-weight: 500;
     text-align: center;
@@ -152,13 +152,14 @@ ABOUT ME SECTION
     border-radius: 20px;
     align-self: center;
     font-weight: 800;
+    /* Drop shadow: figma */
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 
 /* Set Style for the about me section headshot photo */
 .aboutMePhoto {
     width: 600px; 
-    height: 600px; 
     margin-left: 50px;
     margin-right: 50px;
 }
@@ -189,11 +190,12 @@ MY WORK SECTION
     font-weight: 800;
     margin-left: 10px;
     margin-right: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* Set style for updating color of selected sort method button */
 .selectedButton {
-    background-color: gray;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 /* Set style for the project listing images in the "My Work" section (project icons) */
