--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav a {
     /* bolder text: https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight */
     font-weight: 800;
     color: black;
-    text-decoration: underline 5px;
+    text-decoration: underline 2px;
 }
 
 /* Set spacing between navigation bar options */
@@ -187,10 +187,15 @@ ABOUT ME SECTION
 
 /* Set style for about me paragraph text box */
 .aboutMePara {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
     font-size: 24px;  
     text-align: justify;
+    line-height: 180%;
+}
+
+.aboutMeTitle {
+    margin-top: 30px;
+    margin-bottom: 60px;
 }
 
 /* Set style for about me section contact link button */
@@ -237,6 +242,7 @@ MY WORK SECTION
 /* Ensure the projects take up 100% of the section width (80% of page) */
 #projectList {
     width: 100%;
+    margin-top: 50px;
 }
 
 /* Set a style for the sort method buttons */
@@ -263,7 +269,7 @@ MY WORK SECTION
 
 /* Style headers for each of the project types when sorted by type */
 .typeSortHeader {
-    font-size: 24px;
+    font-size: 36px;
     color: #1C19C2;
     margin-top: 50px;
     font-weight: bold;
@@ -273,10 +279,10 @@ MY WORK SECTION
 .projectListImage {
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    height: 200px;
-    width: 200px;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    height: 300px;
+    width: 300px;
 }
 
 /* Set a hover style for the project listing image (by type) s in the "My Work" section */
@@ -320,15 +326,16 @@ MY WORK SECTION
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 /* Style a div to look like a dot that can be placed on the globe (location sort) */
 .projectDot {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: #000;
-    border-radius: 50%;
+    /*position: absolute; */
+    width: 30px;
+    height: 30px;
+    /*background-color: #000; */
+    /*border-radius: 50%; */
     cursor: pointer;
 }
 
@@ -340,6 +347,24 @@ MY WORK SECTION
     height: 200px;
     top: -200px;
     border-radius: 10px;
+    opacity: 0.5;
+}
+
+/* Set style for the project titles that appear on hover of the location globe */
+.projectListTitleMap {
+    position: absolute;
+    display: none;
+    background-color: transparent;
+    width: 100%;
+    width: 200px;
+    height: 200px;
+    top: -180px;
+    text-align: center;
+    transition: opacity 0.3s ease-in-out;
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    font-weight: 800;
 }
 
 /*----------------------------------------------------------------------------------------
@@ -351,7 +376,7 @@ CONTACT SECTION
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: baseline;
+    align-items: center;
     margin-top: 100px;
 }
 
@@ -387,11 +412,11 @@ HEADER
 /* Style the project detail page info: box describing project attributes */
 #projectInfoBox {
     width: 100%;
-    border-top: 3px black solid;
-    border-bottom: 3px black solid;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    height: 80px;
+    border-top: 2px black solid;
+    border-bottom: 2px black solid;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -409,7 +434,7 @@ HEADER
 
 #projectInfoBoxLocation {
     font-size: 24px;
-    width: 150px;
+    width: 500px;
     text-align: center;
 }
 
@@ -426,6 +451,8 @@ HEADER
     text-align: justify;
     margin-top: 20px;
     margin-bottom: 10px;
+    line-height: 150%;
+    width: 80%;
 }
 
 /*----------------------------------------------------------------------------------------
