--- a/css/style.css
+++ b/css/style.css
@@ -277,12 +277,12 @@ MY WORK SECTION
 
 /* Set style for the project listing images (by type) in the "My Work" section (project icons) */
 .projectListImage {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
     padding-left: 2.5%;
     padding-right: 2.5%;
-    height: 300px;
-    width: 300px;
+    height: 20%;
+    width: 20%;
 }
 
 /* Set a hover style for the project listing image (by type) s in the "My Work" section */
